# transcriptd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: transcriptd.rb
contrib/: dev.transcriptd.daemon.plist  transcriptd.service
crates/transcriptd-claude/: Cargo.toml
crates/transcriptd-claude/src/: lib.rs  main.rs
crates/transcriptd-codex/: Cargo.toml
crates/transcriptd-codex/src/: lib.rs
crates/transcriptd-core/: Cargo.toml
crates/transcriptd-core/src/: lib.rs
crates/transcriptd-cursor/: Cargo.toml
crates/transcriptd-cursor/src/: lib.rs
crates/transcriptd-store/: Cargo.toml
crates/transcriptd-store/src/: lib.rs
crates/transcriptd-vscode/: Cargo.toml
crates/transcriptd-vscode/src/: lib.rs  main.rs
crates/transcriptd-zed/: Cargo.toml
crates/transcriptd-zed/src/: lib.rs  main.rs
docs/: ADR-001-TRANSCRIPT-ID.md  ARCHITECTURE.md  ROADMAP.md
src/: cli.rs  config.rs  daemon.rs  dash.rs  extractors.rs  format.rs  ipc.rs  main.rs  mcp.rs  parse.rs
src/commands/: completion.rs  digest.rs  ingest.rs  inspect.rs  list.rs  logs.rs  mcp_show.rs  mcp_stop.rs  mod.rs  search.rs  service.rs  show.rs  stats.rs  status.rs  watch.rs
