[package]
name = "transcriptd-cursor"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "transcriptd_cursor"
path = "src/lib.rs"

[dependencies]
transcriptd-core = { path = "../transcriptd-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
