[package]
name = "transcriptd-zed"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Decode Zed AI agent threads from SQLite/zstd into markdown with YAML frontmatter"

[lib]
name = "transcriptd_zed"
path = "src/lib.rs"

[[bin]]
name = "transcriptd-zed"
path = "src/main.rs"

[dependencies]
transcriptd-core = { path = "../transcriptd-core" }
rusqlite = { version = "0.34", features = ["bundled"] }
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
